<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="90dp"
    android:background="@color/dark_turquoise">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_project_trojan"
            android:layout_marginTop="16dp"
            android:layout_marginStart="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/gameplay_videos"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp" >

            <!-- Превью видео 1 -->
            <ImageView
                android:id="@+id/videoPreview1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/trailer"
                android:src="@drawable/video_preview"
                android:layout_marginTop="90dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop" />

            <!-- Превью видео 2 -->
            <ImageView
                android:id="@+id/videoPreview2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/trailer"
                android:src="@drawable/video_preview"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop" />
<!--                android:scaleType="fitCenter"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/description_text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/description_text" />
        </LinearLayout>

        <View
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_alignParentBottom="true"
            android:background="#1E1E1E" />

        <ImageView
            android:id="@+id/logo_footer"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_project_trojan"
            android:layout_marginTop="840dp"
            android:layout_marginStart="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:contentDescription="@string/contact_us"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:layout_marginStart="85dp"
            android:layout_marginTop="840dp"
            android:textStyle="bold"
            android:textColor="@color/dark_turquoise"/>

        <ImageView
            android:id="@+id/email_icon"
            android:contentDescription="@string/email"
            android:src="@drawable/email_icon"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="865dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="115dp"
            android:layout_marginTop="870dp"
            android:textColor="@color/dark_turquoise"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="904dp"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/footer_item1"
            android:layout_marginStart="90dp"
            android:id="@+id/footer_item1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/footer_item2"
            android:layout_marginStart="90dp"
            android:id="@+id/footer_item2"

            android:layout_below="@id/footer_item1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/footer_item3"
            android:layout_marginStart="90dp"
            android:id="@+id/footer_item3"

            android:layout_below="@id/footer_item2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/footer_item4"
            android:layout_marginStart="90dp"
            android:id="@+id/footer_items"

            android:layout_below="@id/footer_item3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_marginStart="3dp"
            android:layout_marginTop="978dp"
            android:textColor="@color/white"
            android:textSize="11sp" />

    </RelativeLayout>

</ScrollView>